# SystemCDemo

./: .gitignore  CMakeLists.txt  README.md  main.cpp
demo/: counter.vcd  design.cpp  sim
include/: fir.h  hello.h  tb.h
src/: addFunction.cpp  fir.cpp  main.cpp  tb.cpp
